# prefect-collection-registry

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deployment.yaml  generate_block_metadata.py  generate_collection_metadata.py  generate_flow_metadata-deployment.yaml  generate_flow_metadata.py  merge_block_metadata.py  merge_collection_metadata.py  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  update_all_collections-deployment.yaml  update_collection_metadata-deployment.yaml  utils.py
.github/workflows/: generate-block-metadata.yml  generate-collection-metadata.yml  json-validation.yml  merge-block-metadata.yml  merge-collection-metadata.yml  pr_views_to_core.yml  pre-commit.yml  prefect-deploy-integrations.yaml  prefect-deploy.yml  tests.yml
.prefect/: flows.json
blocks/prefect/: 2.7.12.json  v2.7.12.json
blocks/prefect-aws/: v0.2.4.json
blocks/prefect-bitbucket/: v0.1.0.json
blocks/prefect-census/: v0.1.1.json
blocks/prefect-dbt/: v0.2.7.json
blocks/prefect-docker/: v0.1.0.json
blocks/prefect-email/: 0.2.1.json  v0.2.2.json
blocks/prefect-firebolt/: v0.1.0.json
blocks/prefect-gcp/: v0.2.5.json  v0.2.6.json
blocks/prefect-hex/: v0.1.1.json
blocks/prefect-kubernetes/: v0.2.0.json
blocks/prefect-monday/: 0.1.0.json  v0.1.0.json
blocks/prefect-openai/: 0.1.1.json  v0.1.1.json
blocks/prefect-snowflake/: 0.26.0.json  v0.26.0.json
blocks/prefect-sqlalchemy/: v0.2.2.json
blocks/prefect-twitter/: v0.1.1.json
collections/: collection_blocks_data.json  collection_flows_metadata.json
collections/prefect-aws/: 0.2.4.json  v0.2.4.json
collections/prefect-azure/: 0.2.3.json  0.2.4.json  v0.2.4.json
collections/prefect-bitbucket/: 0.1.0.json  v0.1.0.json
collections/prefect-census/: 0.1.0.json  v0.1.1.json
collections/prefect-dask/: 0.2.2.json  v0.2.2.json
collections/prefect-databricks/: v0.1.4.json
flows/: collection_flows_metadata.json
scripts/: view_schema_validation.py
src/: cli.py  find_by_capability.py  generate_block_metadata.py  generate_collection_metadata.py  generate_flow_metadata.py  generate_worker_metadata.py  merge_block_metadata.py  metadata_schemas.py  pr_views_to_core.py  replace_logo_urls.py  schemas.py  update_collection_metadata.py  utils.py  view_schema_validation.py
tests/: conftest.py  test_generate.py  test_generate_worker_metadata.py  test_module.py  test_utils.py
views/: aggregate-block-metadata.json  aggregate-collection-metadata.json  aggregate-flow-metadata.json  aggregate-worker-metadata.json  demo-flows.json
(+588 files in other folders)
