[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prefect-collection-registry"
authors = [
    {name = "Prefect Technologies", email = "help@prefect.io"},
]
description = "Maintaining the Prefect Collection Registry"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prefect>=2.13.5",
    "fastjsonschema==2.16.2",
    "gh-util>=0.1.10"

]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "coverage", "prefect-kubernetes"]
