[project]
name = "prefect-collection-registry"
version = "0.1.0"
description = "Maintaining the Prefect Collection Registry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["prefect", "fastjsonschema==2.16.2", "gh-util"]

[project.optional-dependencies]
dev = ["pytest", "hatchling", "prefect[kubernetes]", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_collection_registry"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["src"]
